--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>To do list Creater</title>
+	<title>To do list Creator</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
