--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>To do list Creator</title>
+	<link rel="icon" href="favicon.ico">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
